chore: config